--- a/src/components/comps.css
+++ b/src/components/comps.css
@@ -43,3 +43,17 @@
     margin-right: 0.5em;
     margin-bottom: 0;
 }
+.todo-card{
+    display: flex;
+    margin-left:0.3em;
+    padding: 0.5em;
+    gap: 1em;
+    align-items: center;
+    position: relative;
+    border-bottom: 1px solid black;
+}
+.todo-card .del-icon{
+    justify-self: flex-end;
+    position: absolute;
+    right: 2em;
+}
