--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -48,3 +48,8 @@ input,textarea{
     flex-direction: column;
     gap: 1.2em;
 }
+.todo-container{
+    margin-left: 0.2em;
+    display: flex;
+    flex-direction: column;
+}
